fix scrollbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -31,26 +31,27 @@ div::selection,
 
 //############################ Scroll #######################
 
-// ::-webkit-scrollbar {
-//   width: 10px;
-// }
-
-// ::-webkit-scrollbar-thumb {
-//   background: var(--main);
-//   border: 1px solid var(--page-background2);
-// }
-
-// ::-webkit-scrollbar-track {
-//   background-color: var(--page-background2);
-// }
-
-* {
-  scrollbar-width: none;
-}
-
 ::-webkit-scrollbar {
-  display: none;
+  width: 10px;
 }
+
+::-webkit-scrollbar-thumb {
+  background: #a2a2a2;
+  border-radius: 500px;
+  border: 2px solid var(--page-background);
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--page-background);
+}
+
+// * {
+//   scrollbar-width: none;
+// }
+
+// ::-webkit-scrollbar {
+//   display: none;
+// }
 
 //############################ FONTS #######################
 
